# StockForecaster

./: .gitignore  DEPLOYMENT.md  FIX-CONNECTION-CLOSED.md  QUICK-DEPLOY.md  README.md  RENDER-FIX.md  RENDER-READY.md  app.py  build.sh  files.md  pyproject.toml  render-build.sh  render-requirements.txt  render-start.sh  render.txt  render.yaml  replit.md  requirements.txt  start.sh
.streamlit/: config.toml
attached_assets/: Pasted-Checking-for-stationarity-With-just-a-look-at-our-plot-we-can-see-that-the-data-is-not-stationary--1756711157181_1756711157182.txt  daily_adjusted_IBM_1756713635886.csv
