[project]
name = "arima-financial-dashboard"
version = "0.1.0"
description = "ARIMA Financial AI Dashboard - Advanced forecasting and analysis platform"
requires-python = ">=3.11"
dependencies = [
    "alpha-vantage>=3.0.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "prophet>=1.1.7",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.49.1",
    "tensorflow>=2.20.0",
    "websockets>=15.0.1",
    "yfinance>=0.2.65",
]
